# Pangolin

./: .dockerignore  .gitignore  AUDIT_AND_TEST_PLAN.md  AUDIT_REPORT.md  LICENSE  ORGANIZATION.md  PYICEBERG_INTEGRATION_SUMMARY.md  README.md  SQLITE_BACKEND_PLAN.md  admin_token.json  architecture.md  check_log.txt  check_session.py  debug_output_final.txt  debug_requests.py  docker-compose.db-test.yml  docker-compose.emulators.yml  docker-compose.release.yml  docker-compose.yml  example.env  fix_doc_links.sh  pangolin_docs.md  pypangolin_docs.md  requirements.md  seed_data.py  test-emulators.sh  test_features.py  test_header_debug.py  test_headers.py  test_multi_tenant.py  test_multitenant_auth.py  test_no_auth.py  test_output.txt  test_output_memory_fixed_v5.txt  test_output_memory_fixed_v6.txt  test_output_memory_fixed_v7.txt  test_output_memory_fixed_v8.txt  test_output_memory_fixed_v9.txt  test_output_mongo_v1.txt  test_output_postgres_clean.txt  (+24 more)
pangolin/: .dockerignore  .test_output.txt  Cargo.toml  Dockerfile  Dockerfile.tools  api_check_errors.txt  api_check_errors_2.txt  api_check_errors_3.txt  api_log.txt  api_mongo_log.txt  api_postgres_log.txt  api_sqlite_log.txt  check_output.txt  check_output_2.txt  check_output_final.txt  debug.db  docker-compose.yml  pangolin.db  pangolin_test.db  populate_test_data.sh  server_log.txt  source_dump.txt  test.db  test_backend_enhancements.sh  test_catalog.db  test_cli_enhancements.sh  test_cli_federated.sh  test_federated_api.py  test_minimal_login.sh  test_mongo_endpoints.sh  test_new_cli_commands.sh  test_new_cli_focused.sh  test_new_endpoints.sh  test_output.txt  test_output_memory_fixed_v3.txt  test_output_mongo.txt  test_output_postgres.txt  test_output_postgres_2.txt  test_output_postgres_3.txt  test_output_sqlite.txt  (+5 more)
pangolin/pangolin_api/: Cargo.toml
pangolin/pangolin_api/src/: asset_handlers.rs  audit_handlers.rs  audit_tests.rs  auth.rs  auth_middleware.rs  auth_test.rs  authz.rs  authz_utils.rs  business_metadata_handlers.rs  business_metadata_test.rs  cached_store.rs  cleanup_job.rs  conflict_detector.rs  credential_vending.rs  dashboard_handlers.rs  error.rs  federated_catalog_handlers.rs  federated_proxy.rs  iceberg_handlers.rs  iceberg_handlers_test.rs  isolation_test.rs  lib.rs  main.rs  merge_handlers.rs  oauth_handlers.rs  openapi.rs  optimization_handlers.rs  pangolin_handlers.rs  permission_handlers.rs  rbac_integration_test.rs  root_auth_tests.rs  service_user_handlers.rs  signing_handlers.rs  signing_handlers_test.rs  system_config_handlers.rs  tenant_handlers.rs  tests_backend_work.rs  tests_common.rs  token_handlers.rs  user_handlers.rs  (+2 more)
pangolin/pangolin_api/tests/: api_tests.rs  audit_api_tests.rs  auth_test.rs  business_metadata_test.rs  credential_vending_integration.rs  credential_vending_tests.rs  e2e_credential_vending.rs  full_system_test.rs  iceberg_endpoints_tests.rs  iceberg_handlers_test.rs  isolation_test.rs  live_azure_oauth2.rs  live_credential_vending.rs  live_minio_sts.rs  merge_tests.rs  rbac_integration_test.rs  rest_spec_tests.rs  root_auth_tests.rs  signing_handlers_test.rs  test_auth_middleware.rs  test_credential_vending.rs  test_federated_catalogs.rs  test_federated_proxy.rs  test_iceberg_handlers.rs  test_pagination.rs  test_service_users.rs  test_tenant_handlers.rs  test_token_generation.rs
pangolin/pangolin_cli_admin/: Cargo.toml
pangolin/pangolin_cli_admin/src/: commands.rs  handlers.rs  main.rs
pangolin/pangolin_cli_admin/tests/: test_new_commands.rs  test_optimization_commands.rs  test_permission_resolution.rs
pangolin/pangolin_cli_common/: Cargo.toml
pangolin/pangolin_cli_common/examples/: auth_flow.rs
pangolin/pangolin_cli_common/src/: client.rs  config.rs  error.rs  lib.rs  optimization_types.rs  utils.rs
pangolin/pangolin_cli_user/: Cargo.toml
pangolin/pangolin_cli_user/src/: commands.rs  handlers.rs  main.rs
pangolin/pangolin_core/: Cargo.toml
pangolin/pangolin_core/src/: audit.rs  auth.rs  business_metadata.rs  iceberg_metadata.rs  lib.rs  maintenance.rs  manifest.rs  model.rs  pagination.rs  permission.rs  snapshot.rs  token.rs  user.rs
pangolin/pangolin_store/: Cargo.toml  check_errors.txt  fix_memory_modules.py  split_memory.py
pangolin/pangolin_store/migrations/: 20251212000000_initial_schema.sql  20251216000000_add_rbac.sql  20251217000000_add_token_revocation.sql  20251218000000_add_multi_cloud_vending.sql  20251221000000_fix_asset_branching.sql  20251226000000_add_service_users_audit_system.sql  20251226010000_add_merge_operations.sql  20251229000000_denormalize_tenant_ids.sql  20251229010000_relax_rbac_fks.sql  20251229020000_performance_indexing.sql  20251229030000_audit_log_partitioning_prep.sql
pangolin/pangolin_store/sql/: postgres_schema.sql  sqlite_schema.sql
pangolin/pangolin_store/src/: aws_utils.rs  azure_signer.rs  gcp_signer.rs  lib.rs  memory.rs  memory.rs.bak  metadata_cache.rs  mongo.rs  mongo.rs.bak  object_store_cache.rs  object_store_factory.rs  postgres.rs  s3.rs  signer.rs  sqlite.rs  tests.rs
pangolin/pangolin_store/tests/: catalog_store_tests.rs  mongo_audit_tests.rs  mongo_comprehensive_tests.rs  mongo_tests.rs  new_endpoints_tests.rs  postgres_audit_tests.rs  postgres_comprehensive_tests.rs  postgres_tests.rs  search_verification.rs  sqlite_comprehensive_tests.rs  store_integration.rs  store_tests.rs  token_revocation_tests.rs  update_tests.rs
pangolin/scripts/: run_memory_test.sh  test_memory_live_minio.py  test_postgres_minio.py
pangolin/tests/: cli_e2e.sh  cli_pagination_test.sh  dashboard_stats_test.rs  test.db  test_memorystore_optimizations.sh  test_mongostore_optimizations.sh  test_postgresstore_optimizations.sh  test_sqlitestore_optimizations.sh  verify_mongo_stats.sh  verify_postgres_stats.sh  verify_sqlite_stats.sh
pypangolin/: README.md  pyproject.toml
pypangolin/docs/cli/: README.md  admin.md  profiles.md  user.md
pypangolin/src/pypangolin/: __init__.py  admin.py  auth.py  catalog.py  client.py  exceptions.py  git.py  models.py
pypangolin/tests/: test_cli_commands.py  test_cli_config.py
(+782 files in other folders)
