[package]
name = "pangolin_api"
version = "0.1.0"
edition = "2021"

[dependencies]
pangolin_core = { path = "../pangolin_core" }
pangolin_store = { path = "../pangolin_store" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto", "use_pem"], default-features = false }
base64 = "0.22.1"
bcrypt = "0.15"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"

[dev-dependencies]
hyper = { version = "1.0", features = ["full"] }
pangolin_store = { path = "../pangolin_store" }
serial_test = "2.0"
