[package]
name = "pangolin_api"
version = "0.1.0"
edition = "2021"

[dependencies]
pangolin_core = { path = "../pangolin_core" }
pangolin_store = { path = "../pangolin_store" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { version = "9.3.0", features = ["use_pem"], default-features = false }
base64 = "0.22.1"
bcrypt = "0.15"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
rand = "0.8"
bytes = "1.5"
serde_yaml = "0.9"
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

# Cloud provider SDKs (optional features)
aws-config = { version = "1.0", optional = true }
aws-sdk-sts = { version = "=1.50.0", optional = true }
aws-credential-types = { version = "1.0", optional = true }
aws-smithy-types = { version = "1.0", optional = true }
azure_identity = { version = "0.20", optional = true }
azure_core = { version = "0.20", optional = true }
gcp_auth = { version = "0.12", optional = true }

[features]
default = []
aws-sts = ["aws-config", "aws-sdk-sts", "aws-credential-types", "aws-smithy-types"]
azure-oauth = ["azure_identity", "azure_core"]
gcp-oauth = ["gcp_auth"]
cloud-credentials = ["aws-sts", "azure-oauth", "gcp-oauth"]

[dev-dependencies]
hyper = { version = "1.0", features = ["full"] }
pangolin_store = { path = "../pangolin_store" }
serial_test = "2.0"
