[package]
name = "pangolin_cli_common"
version = "0.2.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
dialoguer = "0.11"
prettytable-rs = "0.10"

[dev-dependencies]
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "pangolin_cli_common"
path = "src/lib.rs"
