[package]
name = "pangolin_store"
version = "0.1.0"
edition = "2021"

[dependencies]
pangolin_core = { path = "../pangolin_core" }
object_store = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
aws-sdk-s3 = { version = "1.0", features = ["behavior-version-latest"] }
aws-config = { version = "1.0", features = ["behavior-version-latest"] }
aws-credential-types = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "sqlite", "uuid", "chrono", "json"] }
mongodb = "3.4.1"
bson = { version = "2.14", features = ["uuid-1", "chrono-0_4"] }
